--- a/SportsStore/Views/Shared/_Layout.cshtml
+++ b/SportsStore/Views/Shared/_Layout.cshtml
@@ -4,10 +4,20 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Sports Store</title>
+    <link rel="stylesheet"
+          asp-href-include="/css/*.css" />
 </head>
 <body>
-    <div>
-        @RenderBody()
+    <div class="navbar" role="navigation">
+        <a class="navbar-brand" href="#">SPORTS STORE</a>
+    </div>
+    <div class="row m-1 p-1">
+        <div id="categories" class="col-3">
+            Put something useful here
+        </div>
+        <div class="col-9">
+            @RenderBody()
+        </div>
     </div>
 </body>
 </html>
