--- a/SportsStore/Views/Product/List.cshtml
+++ b/SportsStore/Views/Product/List.cshtml
@@ -2,11 +2,11 @@
 
 @foreach (var product in Model.Products)
 {
-    <div class="card card-group m-1 p-1">
-        <div class="bg-dark p-1">
+    <div class="card m-1 p-1">
+        <div class="bg-light p-1">
             <h4>
                 @product.Name
-                <span class="badge badge-pill badge-primary" style="float:right">
+                <span class="badge badge-primary badge-pill" style="float:right">
                     <small>@product.Price.ToString("c")</small>
                 </span>
             </h4>
