--- a/SportsStore/Views/Shared/_Layout.cshtml
+++ b/SportsStore/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
           asp-href-include="/css/*.css" />
 </head>
 <body>
-    <div class="navbar" role="navigation">
+    <div class="navbar navbar-collapse" role="navigation">
         <a class="navbar-brand" href="#">SPORTS STORE</a>
     </div>
     <div class="row m-1 p-1">
