--- a/SportsStore/Views/Product/List.cshtml
+++ b/SportsStore/Views/Product/List.cshtml
@@ -2,17 +2,7 @@
 
 @foreach (var product in Model.Products)
 {
-    <div class="card m-1 p-1">
-        <div class="bg-light p-1">
-            <h4>
-                @product.Name
-                <span class="badge badge-primary badge-pill" style="float:right">
-                    <small>@product.Price.ToString("c")</small>
-                </span>
-            </h4>
-        </div>
-        <div class="card-text p-1">@product.Description</div>
-    </div>
+    <partial name="ProductSummary" model="@product" />
 }
 
 <div page-model="@Model.PagingInfo" page-action="List" page-classes-enabled="true"
