--- a/SportsStore/Views/Shared/_Layout.cshtml
+++ b/SportsStore/Views/Shared/_Layout.cshtml
@@ -8,9 +8,12 @@
           asp-href-include="/css/*.css" />
 </head>
 <body>
-    <div class="navbar navbar-collapse" role="navigation">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" role="navigation">
         <a class="navbar-brand" href="#">SPORTS STORE</a>
-    </div>
+        <div class="">
+            @await Component.InvokeAsync("CartSummary")
+        </div>
+    </nav>
     <div class="row m-1 p-1">
         <div id="categories" class="col-3">
             @await Component.InvokeAsync("NavigationMenu")
