add Order model class

--- a/SportsStore/Views/Shared/_Layout.cshtml
+++ b/SportsStore/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
           asp-href-include="/css/*.css" />
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" role="navigation">
+    <nav class="navbar navbar-dark bg-dark" role="navigation">
         <a class="navbar-brand" href="#">SPORTS STORE</a>
         <div class="">
             @await Component.InvokeAsync("CartSummary")
