--- a/SportsStore/Views/Cart/Index.cshtml
+++ b/SportsStore/Views/Cart/Index.cshtml
@@ -48,4 +48,5 @@
 
 <div class="text-center">
     <a class="btn btn-primary" href="@Model.ReturnUrl">Continue shopping</a>
+    <a class="btn btn-success" asp-action="Checkout" asp-controller="Order">Checkout</a>
 </div>
