--- a/SportsStore/Views/Cart/Index.cshtml
+++ b/SportsStore/Views/Cart/Index.cshtml
@@ -46,7 +46,7 @@
     </tfoot>
 </table>
 
-<div class="text-center">
+<div class="text-center" style="">
     <a class="btn btn-primary" href="@Model.ReturnUrl">Continue shopping</a>
-    <a class="btn btn-success" asp-action="Checkout" asp-controller="Order">Checkout</a>
+    <a class="btn btn-primary" asp-action="Checkout" asp-controller="Order">Checkout</a>
 </div>
