--- a/SportsStore/Views/Order/List.cshtml
+++ b/SportsStore/Views/Order/List.cshtml
@@ -1,5 +1,10 @@
 ﻿@model IEnumerable<Order>
 
+@{
+    Layout = "_AdminLayout";
+    ViewBag.Title = "Orders";
+}
+
 @if (Model.Count() > 0)
 {
     <table class="table table-bordered table-striped">
