fix Checout view (add zip code field)

--- a/SportsStore/Views/Order/List.cshtml
+++ b/SportsStore/Views/Order/List.cshtml
@@ -12,7 +12,7 @@
         {
             <tr>
                 <td>@order.Name</td>
-                <td>@order.Zip</td>
+                <td>@(order.Zip ?? "No zip code added")</td>
                 <th>Product</th>
                 <th>Quantity</th>
                 <td>
