--- a/SportsStore/Views/Order/Checkout.cshtml
+++ b/SportsStore/Views/Order/Checkout.cshtml
@@ -25,6 +25,10 @@
         <input asp-for="Line3" class="form-control" />
     </div>
     <div class="form-group">
+        <label>Zip code:</label>
+        <input asp-for="Zip" class="form-control" />
+    </div>
+    <div class="form-group">
         <label>City:</label>
         <input asp-for="City" class="form-control" />
     </div>
