--- a/SportsStore/Views/Shared/_AdminLayout.cshtml
+++ b/SportsStore/Views/Shared/_AdminLayout.cshtml
@@ -8,7 +8,7 @@
 </head>
 <body class="m-1 p-1">
     <div class="bg-info p-2">
-        <h4>@ViewBag.Title</h4>
+        <h4 class="text-light">@ViewBag.Title</h4>
     </div>
     @RenderBody()
 </body>
