add validation for th Product editing view

--- a/SportsStore/Views/Shared/_AdminLayout.cshtml
+++ b/SportsStore/Views/Shared/_AdminLayout.cshtml
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
     <link asp-href-include="/css/*.css" rel="stylesheet" />
+    <style>
+        .input-validation-error {
+            border-color: red;
+            background-color: #fee;
+        }
+    </style>
 </head>
 <body class="m-1 p-1">
     <div class="bg-info p-2">
