--- a/SportsStore/Views/Admin/Edit.cshtml
+++ b/SportsStore/Views/Admin/Edit.cshtml
@@ -5,23 +5,26 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<div asp-validation-summary="All" class="text-danger"></div>
 <form asp-action="Edit" method="post">
     <input type="hidden" asp-for="ProductId" />
     <div class="form-group">
         <label asp-for="Name"></label>
+        <div><span asp-validation-for="Name" class="text-danger"></span></div>
         <input asp-for="Name" class="form-control" />
     </div>
     <div class="form-group">
         <label asp-for="Description"></label>
+        <div><span asp-validation-for="Description" class="text-danger"></span></div>
         <textarea asp-for="Description" class="form-control"></textarea>
     </div>
     <div class="form-group">
         <label asp-for="Category"></label>
+        <div><span asp-validation-for="Category" class="text-danger"></span></div>
         <input asp-for="Category" class="form-control" />
     </div>
     <div class="form-group">
         <label asp-for="Price"></label>
+        <div><span asp-validation-for="Price" class="text-danger"></span></div>
         <input asp-for="Price" class="form-control" />
     </div>
     <div class="text-center">
