--- a/SportsStore/Views/Shared/_AdminLayout.cshtml
+++ b/SportsStore/Views/Shared/_AdminLayout.cshtml
@@ -16,8 +16,14 @@
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
 </head>
 <body class="m-1 p-1">
-    <div class="bg-info p-2">
-        <h4 class="text-light">@ViewBag.Title</h4>
+    <div class="bg-info p-2 row">
+        <div class="col">
+            <h4 class="text-light">@ViewBag.Title</h4>
+        </div>
+        <div class="ml-auto" style="margin-right: 10px">
+            <a class="btn btn-warning"
+               asp-action="Logout" asp-controller="Account">Log Out</a>
+        </div>
     </div>
     @if (TempData["message"] != null)
     {
